# dogeops-action

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  _api.sh  _context.sh  _github.sh  _logging.sh  _outcome.sh  action.yml  doge.sh  entrypoint.sh  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy-repo.yaml  deploy-repo.yml  deploy-via-dogeops.yml  publish-dockerhub.yml  push-to-dockerhub.yaml  push-to-docr.yaml  push-to-ghcr.yaml  python-lint.yaml
doge-ts/: package-lock.json  package.json
doge-ts/src/: index.ts
dogeaction/: Makefile  __main__.py  adapters.py  api.py  app.py  ascii.py  pyproject.toml
dogeaction/adapters/: __init__.py  github.py  repository.py
dogeaction/models/: dogeops.py
src/: api.ts  context.ts  git.ts  index.ts  logging.ts  outcome.ts  utils.ts
src/dogeaction/: __init__.py  __main__.py  adapters.py  api.py  app.py  ascii.py  models.py
src/dogeaction/models/: dogeops.py  github.py
